--- a/IF_page.html
+++ b/IF_page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ashley Kubatko - Integrated Forensics</title>
 
-    <!-- Load fonts -->
+    <!-- Load fonts test commit -->
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 
