made new pubish changes

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="content container">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<!--<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>-->
 					</header>
 					<div class="box container 75%">
 
