updated date in footer, new resume

--- a/OLD THEME/index.html
+++ b/OLD THEME/index.html
@@ -188,7 +188,7 @@
                         with a focus in the field of computational science and engineering.
                     </p>
                     <div>
-                        <a href="Kubatko_Ashley CV 11-5-15.pdf" class="btn btn-lg btn-primary" target="_blank">Download Resume</a>
+                        <a href="Kubatko CV (April 16).pdf" class="btn btn-lg btn-primary" target="_blank">Download Resume</a>
                     </div>
 				</div>
 				<div class="col-md-3 col-md-offset-1">
@@ -227,7 +227,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
-					<p>&copy; 2015 Ashley Kubatko</p>
+					<p>&copy; 2016 Ashley Kubatko</p>
 				</div>
 				<div class="col-md-4">
 					<ul class="social-icons">
